--- a/css/minesweeper.scss
+++ b/css/minesweeper.scss
@@ -10,65 +10,145 @@ $cell-open-background: #cfcdcd;
   background-image: linear-gradient($deg, $start-color, $end-color);
 
 }
+
+//------- fonts
+@font-face {
+  font-family: 'ComputerFont';
+  src: url('../fonts/computerfont-webfont.eot');
+  src: url('../fonts/computerfont-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/computerfont-webfont.woff2') format('woff2'),
+  url('../fonts/computerfont-webfont.woff') format('woff'),
+  url('../fonts/computerfont-webfont.ttf') format('truetype'),
+  url('../fonts/computerfont-webfont.svg#computerfontregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 //------- styles
 body {
-  background-color: #0e2d27;
+  background-color: #282828;
 
 }
+
 // content container
 #container {
   width: 80%;
-  margin: auto;
-  min-width: 128px;
+  margin: 30px auto auto auto;
+  min-width: 280px;
   max-width: 50%;
-
+  padding: 10px;
+  background-color:#4e4e4e;
 }
-// table
+
+// top panel
+#stats{
+  background-color:#fafafa;
+  height:5%;
+  width:100%;
+  padding:2% 0 1% 0;
+  font-family: ComputerFont;
+  font-size: 24px;
+  color:#707070;
+
+  &>div{
+    display:inline-block;
+  }
+
+  &.win{
+    color: green;
+  }
+  &.loose{
+    color: red;
+  }
+}
+
+#new-game-btn{
+  float:right;
+  cursor:pointer;
+  margin-right:15px;
+  &:hover{
+    color: #b3b3b3;
+  }
+}
+
+.counter{
+  margin-left:15px;
+  i{
+    font-size: 45%;
+  }
+}
+
+// game field table element
 #minefield {
   width: 100%;
-  border-collapse: separate;
-  border-spacing: 1px;
-  background: #aba9a9;
-  border: 2px solid #badbc5;
-  border-top: none;
+  border-collapse: collapse;
+  background: #c2bfbf;
+  table-layout: fixed;
+
   td {
+    overflow: hidden;
     position: relative;
     // rule provides automatic proportional height for the cells
     &:after {
       content: '';
       display: block;
       margin-top: 100%;
-
     }
     div {
+      overflow: hidden;
       position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
-      border-width: 1px;
+      margin: 1px;
+      border-width: 3px;
       border-style: solid;
       border-color: $cell-border-light $cell-border-dark $cell-border-dark $cell-border-light;
       background: $cell-gradient-light;
       @include gradient($cell-gradient-dark, $cell-gradient-light, 135deg);
       transition: all 200ms linear;
       background-size: 100% 100%;
-
-      &:hover {
-        background-size: 400% 10%;
-        border-color: $cell-border-light;
-
-      }
+      cursor: pointer;
+      // when cell is marked as "mine" it's unclickable
       &.open {
         background: $cell-open-background;
         border-color: $cell-border-dark;
       }
 
+      &:hover {
+        border-width: 1px;
+      }
+
+      &.unclickable:hover, &.open:hover {
+        border-width: initial;
+        cursor: default;
+      }
+
     }
     //end: div
+    i {
+      color: white;
+    }
 
   }
   //end: td
 
 }
 //end: #game-field
+
+.svgicon {
+  text-anchor: middle;
+  font-family: FontAwesome;
+  font-size: 18px;
+  text-shadow: #fff 0 0 3px;
+  fill: #808080;
+
+}
+
+.no-text-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
