updated toolbar text colour for legibility

--- a/css/minesweeper.sass
+++ b/css/minesweeper.sass
@@ -22,7 +22,7 @@ body
   padding: 0 $base-padding
   font-size: 34px
   line-height: 64px
-  color: $white-30
+  color: $black-54
   transition:  0.3s ease
   height: 64px
   line-height: 64px
