--- a/css/variables/shadows.sass
+++ b/css/variables/shadows.sass
@@ -1,6 +1,6 @@
 //------ shadows
-// browed from the kind folks at working on the angular material project
+// borrowed from the kind folks working on the angular material project
 // http://material.angular.com
 
-$low-box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12)
-$high-box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12)
+$low-box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,0.12)
+$high-box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,0.12)
